--- a/src/styles/sass/k-responsive-menu.sass
+++ b/src/styles/sass/k-responsive-menu.sass
@@ -1,3 +1,10 @@
+/*
+ * Project: k-responsiv-menu is a lightweight jQuery plugin to create responsive multi - level navigation menus with multi device support
+ *  Author: Bao Nguyen
+ *  License: MIT
+ *  Website: http://baonguyenyam.github.io
+ *  Version: 1.0.0
+ */
 .k-responsive-menu
   list-style: none
   margin: 0
