--- a/src/styles/sass/k-responsive-menu.sass
+++ b/src/styles/sass/k-responsive-menu.sass
@@ -5,267 +5,6 @@
  *  Website: http://baonguyenyam.github.io
  *  Version: 1.0.0
  */
-.k-responsive-menu
-  list-style: none
-  margin: 0
-  padding: 0
-  background: #333
-  float: left
-  width: 100%
-  font-family: 'Roboto', sans-serif
-  border-bottom: 3px solid #FD5025
-  li
-    list-style: none
-    ul
-      display: none
-    a
-      color: #c0c0c0
-      i
-        padding-right: 5px
-        color: #FF5737
-    ul.sub-menu li a i
-      padding-right: 10px
-    &.menu-active > a
-      background: #272727 !important
-      color: #fff
-    .menu-active
-      position: relative
-    ul.sub-menu
-      li
-        > a > .arrow:before
-          content: "\f105" !important
-        a
-          display: block
-          margin: 0px 0px
-          padding: 12px 20px 12px 15px
-          text-decoration: none
-          font-size: 13px
-          font-weight: normal
-          background: none
-      background: #333
-      > li
-        width: 185px
-  > li
-    display: block
-    margin: 0
-    padding: 0
-    border: 0px
-    float: left
-  > li > a
-    display: block
-    position: relative
-    margin: 0
-    border: 0px
-    padding: 18px 20px 18px 12px
-    text-decoration: none
-    font-size: 15px
-    font-weight: 300
-    color: #c0c0c0
-  > li > a i
-    font-size: 16px
-    text-shadow: none
-    color: #FF5737
-  > li > a > .arrow:before
-    margin-left: 15px
-    display: inline
-    font-size: 16px
-    font-family: FontAwesome
-    height: auto
-    content: "\f107"
-    font-weight: 300
-    text-shadow: none
-    width: 10px
-    display: inline-block
-  > li > ul.sub-menu
-    display: none
-    list-style: none
-    clear: both
-    margin: 0
-    position: absolute
-  > li > ul.sub-menu
-    > li
-      position: relative
-      ul.sub-menu
-        position: absolute
-        left: 185px
-        top: 0px
-        display: none
-        list-style: none
-        > li ul.sub-menu
-          position: absolute
-          left: 185px
-          top: 0px
-          display: none
-          list-style: none
-    li > a > .arrow:before
-      float: right
-      margin-top: 1px
-      margin-right: 0px
-      display: inline
-      font-size: 16px
-      font-family: FontAwesome
-      height: auto
-      content: "\f104"
-      font-weight: 300
-      text-shadow: none
+.k-responsive-menu, [k-responsive-menu]
 
-
-/* Menu Toggle Btn */
-
-.menu-toggle
-  display: none
-  float: left
-  width: 100%
-  background: #333
-  h3
-    float: left
-    color: #FFF
-    padding: 0px 10px
-    font-weight: 600
-    font-size: 16px
-  .icon-bar
-    display: block !important
-    width: 18px
-    height: 2px
-    background-color: #F5F5F5 !important
-    -webkit-border-radius: 1px
-    -moz-border-radius: 1px
-    border-radius: 1px
-    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25)
-    -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25)
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25)
-    margin: 3px
-    &:hover
-      background-color: #F5F5F5 !important
-  #menu-btn
-    float: right
-    background: #202020
-    border: 1px solid #0C0C0C
-    padding: 8px
-    border-radius: 5px
-    cursor: pointer
-    margin: 10px
-
-.hide-menu
-  display: none
-
-/* Accordion Menu Styles */
-
-ul
-  &[data-menu-style="accordion"]
-    width: 250px
-    > li
-      display: block
-      margin: 0
-      padding: 0
-      border: 0px
-      float: none !important
-      &:first-child
-        border-top: 2px solid #FD5025
-    li
-      ul.sub-menu > li
-        width: 100%
-      &.menu-active > a > .arrow:before
-        content: "\f107" !important
-      a:hover
-        background: #272727 !important
-    > li > a > .arrow:before
-      float: right
-      content: "\f105"
-    > li
-      >
-        ul.sub-menu
-          position: static
-        a i
-          padding-right: 10px
-          color: #FF5737
-        ul.sub-menu > li ul.sub-menu
-          position: static
-          > li ul.sub-menu
-            position: static
-      border-bottom: 1px solid #242424
-    ul.sub-menu li.menu-active > a > .arrow:before
-      content: "\f107" !important
-  &[data-menu-style="vertical"]
-    width: 200px
-    > li
-      float: none
-      &:first-child
-        border-top: 2px solid #FD5025
-    li
-      ul.sub-menu > li
-        width: 100%
-      a:hover
-        background: #272727 !important
-    > li
-      > a > .arrow:before
-        float: right
-        content: "\f105"
-      &.menu-active
-        position: relative
-      >
-        ul.sub-menu
-          position: absolute
-          left: 200px
-          top: 0px
-          width: 200px
-        a i
-          padding-right: 10px
-          color: #FF5737
-        ul.sub-menu > li ul.sub-menu
-          position: absolute
-          width: 200px
-          left: 200px
-          > li ul.sub-menu
-            position: absolute
-            width: 200px
-            left: 200px
-      border-bottom: 1px solid #242424
-
-/* Vertical Menu Styles */
-
-@media screen and (max-width: 768px)
-  .demo
-    width: 96%
-    padding: 2%
-  ul
-    &[data-menu-style="vertical"], &[data-menu-style="accordion"], &[data-menu-style="vertical"] li ul.sub-menu
-      width: 100% !important
-  .k-responsive-menu
-    float: left
-    width: 100%
-    > li
-      border-bottom: 1px solid #242424
-      float: none
-    li a:hover
-      background: #272727 !important
-    > li
-      &:first-child
-        border-top: 2px solid #FD5025
-      > a
-        i
-          padding-right: 10px
-          color: #FF5737
-        > .arrow:before
-          float: right
-          content: "\f105"
-  li.menu-active > a > .arrow:before
-    content: "\f107" !important
-  .k-responsive-menu
-    li ul.sub-menu
-      > li
-        width: 100%
-      li
-        ul.sub-menu li
-          a
-            padding-left: 30px
-          ul.sub-menu li a
-            padding-left: 50px
-        &.menu-active > a > .arrow:before
-          content: "\f107" !important
-    > li > ul.sub-menu
-      position: static
-      > li ul.sub-menu
-        position: static
-        > li ul.sub-menu
-          position: static
+  // k-responsive-menu
