--- a/src/styles/sass/k-responsive-menu.sass
+++ b/src/styles/sass/k-responsive-menu.sass
@@ -5,6 +5,16 @@
  *  Website: http://baonguyenyam.github.io
  *  Version: 1.0.0
  */
+.k-menu-bar
+	padding: .5rem 1rem
+	&.bg-light
+		background: #dfdfdf
 .k-responsive-menu, [k-responsive-menu]
-
-  // k-responsive-menu
+	padding: 0
+	margin: 0
+	> * 
+		list-style-type: none
+	// Horizontal
+	&.k-menu-horizontal
+		&.k-active
+			display: none
