--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -8,86 +8,235 @@ block css
   link(rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css")
   link(rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
   link(rel="stylesheet" type="text/css" href="./css/k-responsive-menu.css")
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js')
+  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js')
+
+
+block header
+
 
 block body 
   .container
     h1.display-4(style="margin:2rem 0;") K-Resposive-Menu
-    hr 
+    p Working on Bootstrap 4
+    p 
+      code k-responsiv-menu 
+      | is a lightweight jQuery plugin to create responsive multi - level navigation menus with multi device support, By Bao Nguyen 
+      a(href="http://baonguyenyam.github.io/") http://baonguyenyam.github.io/ 
+    hr
 
-    nav
-      .k-menu-bar.bg-light
-        .k-logo LOGO
-        button.k-menu-toggle(k-toggle-for="#demoResAllInOneMenu") MENU
-      ul#demoResAllInOneMenu.nav
-        li.nav-item
-          a.nav-link(href='') Item one  
-        li.nav-item
-          a.nav-link(href='') Item two 
 
+    .row.mt-5
+      .col-sm-3 
+        .list-group.p-0(style='position: -webkit-sticky; position: sticky; top: 1rem; ')
+          .list-group-item.active Menu
+          a.list-group-item.list-group-item-action(href='#sec1') Gettings started 
+          a.list-group-item.list-group-item-action(href='#sec2') Demo 
+          a.list-group-item.list-group-item-action(href='#sec3') APIs 
+          a.list-group-item.list-group-item-action(href='https://github.com/baonguyenyam/k-responsive-menu') Github 
         
-  //-   h3(style="margin:2rem 0;") HTML
-  //-   pre.prettyprint.lang-html.
-  //-     &lt;nav&gt;
-  //-       &lt;div class=&quot;k-menu-toggle&quot;&gt;
-  //-         &lt;h3&gt;Menu&lt;/h3&gt;
-  //-         &lt;button type=&quot;button&quot; id=&quot;menu-btn&quot;&gt;
-  //-           &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
-  //-           &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
-  //-           &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
-  //-         &lt;/button&gt;
-  //-       &lt;/div&gt;
+      .col-sm-9 
 
-  //-       &lt;ul id=&quot;demoResAllInOneMenu&quot; class=&quot;k-responsive-menu&quot; data-menu-style=&quot;horizontal&quot;&gt;
-  //-         &lt;li&gt;&lt;a href=&quot;&quot;&gt;Item one  &lt;/a&gt;&lt;/li&gt;
-  //-         &lt;li&gt;&lt;a href=&quot;&quot;&gt;Item two &lt;/a&gt;
-  //-           &lt;ul&gt;
-  //-             &lt;li&gt;&lt;a href=&quot;&quot;&gt;sub Item one &lt;/a&gt;&lt;/li&gt;
-  //-             &lt;li&gt;&lt;a href=&quot;&quot;&gt;sub Item two &lt;/a&gt;&lt;/li&gt;
-  //-             &lt;li&gt;&lt;a href=&quot;&quot;&gt;sub Item Three &lt;/a&gt;&lt;/li&gt;
-  //-           &lt;/ul&gt;
-  //-         &lt;/li&gt;
-  //-         &lt;li&gt;&lt;a href=&quot;&quot;&gt;Item three &lt;/a&gt;&lt;/li&gt;
-  //-         &lt;li&gt;&lt;a href=&quot;&quot;&gt;Item four &lt;/a&gt;&lt;/li&gt;
-  //-       &lt;/ul&gt;
-  //-     &lt;/nav&gt;
-    
+        h4#sec1 Gettings started 
+        p.lead.text-danger This Plugins required Bootstrap Framework
+        hr 
+        h5.h5 Install via Bower
+        .border.p-3.bg-light.mb-5 
+          code bower i k-responsive-menu -S
+        h5.h5 CSS
+        p Copy-paste the stylesheet 
+          code &lt;link&gt; 
+          | into your 
+          code &lt;head&gt; 
+          | before all other stylesheets to load our CSS.
+        pre.p-3.prettyprint.lang-html.
+          &lt;link rel=&quot;stylesheet&quot; href=&quot;./bower_components/dist/css/k-responsive-menu.css&quot;&gt;
+        h5.h5 JS
+        p Place the following 
+          code &lt;script&gt; 
+          | near the end of your pages, right before the closing 
+          code &lt;/body&gt; 
+          | tag, to enable them. jQuery must come first, then k-responsive-menu.js, and then our JavaScript plugins.
+        pre.p-3.prettyprint.lang-html.
+          &lt;script src=&quot;./bower_components/dist/js/k-responsive-menu.js&quot;&gt;
 
-  //-   .alert.alert-info Change default style of the Menu (data-menu-style="") to 
-  //-     code horizontal
-  //-     | , 
-  //-     code vertical
-  //-     | , 
-  //-     code accordion
-  //-   h3(style="margin:2rem 0;") JS
-    
-  //-   pre.prettyprint.lang-js.
-  //-     $(document).ready(function() {
-  //-       $('#demoResAllInOneMenu').kResponsiveMenu({
-  //-         resizeWidth: '768', // Set the breakpoint same in Media query       
-  //-         animationSpeed: 'fast', //slow, medium, fast
-  //-         accoridonExpAll: false //Expands all the accordion menu on click
-  //-       });
-  //-     });
+        h3.h3.mt-5#sec2 Demo
+        hr 
 
-    
-  //- script(src='https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js')
-  script.
-     $(document).ready(function() {
-        $('#demoResAllInOneMenu').kResponsiveMenu({
-          animationSpeed: 'slow', // slow, fast, 200
-          resizeWidth: 'sm', // 'xs', 'sm', 'md', 'lg', 'xl', 480,
-          menuIcon: '<i class="fa fa-bars"></i>',
-          onResizeEnd: function(){
-            console.log(this)
-          }
-          //- onResize: function(){
-          //-   console.log(this)
-          //- }
-          //- menuType: 'horizontal', // horizontal, vertical, accordion
-          //- onComplete: null,
-          //- onChange: null,
-          //- onClick: null,
-          //- onBegin: null,
-          //- onHover: null
-        });
-      });
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-basic.html") Basic
+          dd.col-sm-9 Toggle menu basic
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-basic-form.html") Basic with form
+          dd.col-sm-9 Toggle menu with form inline
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-fluid.html") Fluid
+          dd.col-sm-9 Toggle menu with form fluid
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-push-left.html") Push Left
+          dd.col-sm-9 Push menu Left
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-push-right.html") Push Right
+          dd.col-sm-9 Push menu Right
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-map-to.html") Map to
+          dd.col-sm-9 Menu Mapto
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-attr.html") Using Attribute
+          dd.col-sm-9 Without JS Options only using Attribute
+
+
+
+
+        h4.mt-5#sec3 APIs 
+        hr 
+        h5.h5.mt-4 JS Default value
+        pre.p-3.prettyprint.lang-js.
+          $(document).ready(function() {
+            $('#demoResAllInOneMenu').kResponsiveMenu({
+              animationSpeed: 'slow', 
+              resizeWidth: 768, 
+              menuType: 'horizontal',
+              menuPush: null,
+              menuPushPosition: 'absolute', 
+              menuPushWidth: '100%',
+              menuIcon: null, 
+              onResize: null,
+              onComplete: null,
+              onChange: null,
+              onClick: null,
+              onBegin: null,
+              onHover: null
+            });
+          });
+        h5.h5.mt-4 Value
+        table.table.table-sm.table-bordered
+          thead
+            tr
+              th(scope='col') #
+              th(scope='col') Value
+              th(scope='col') Default
+              th(scope='col') Setting
+          tbody
+            tr
+              th(scope='row') 1
+              td animationSpeed
+              td 'slow'
+              td 'slow', 'fast', 200...
+            tr
+              th(scope='row') 2
+              td resizeWidth
+              td 768
+              td 'xs', 'sm', 'md', 'lg', 'xl', 480...
+            tr
+              th(scope='row') 3
+              td menuType
+              td 'horizontal'
+              td 'horizontal', 'vertical', 'accordion'
+            tr
+              th(scope='row') 4
+              td menuPush
+              td null
+              td 'right', 'left'
+            tr
+              th(scope='row') 5
+              td menuPushPosition
+              td 'absolute'
+              td 'fixed'
+            tr
+              th(scope='row') 6
+              td menuPushWidth
+              td '100%'
+              td 'px', '%', 'rem'
+            tr
+              th(scope='row') 7
+              td menuIcon
+              td null
+              td '&lt;i class='fa fa-bars'&gt;&lt;/i&gt;'
+        h5.h5.mt-4 Events
+        table.table.table-sm.table-bordered
+          thead
+            tr
+              th(scope='col') #
+              th(scope='col') Value
+              th(scope='col') Default
+              th(scope='col') Setting
+          tbody
+            tr
+              th(scope='row') 1
+              td onResize
+                br 
+                | onComplete
+                br 
+                | onChange
+                br 
+                | onClick
+                br 
+                | onBegin
+                br 
+                | onHover...
+              td null
+              td onResize: function () {}
+        h5.h5.mt-4 Default Attribute
+        .border.p-3.bg-light.mb-5
+          dl.row
+            dt.col-sm-3 
+              code [k-toggle-for]
+            dd.col-sm-9 Toggle menu have [k-toggle-for] value
+          dl.row.mb-0
+            dt.col-sm-3 
+              code [k-menu-map-to]
+            dd.col-sm-9 On the mobile where contents have attribute [k-menu-map-to] will be auto clone to target element value
+        h5.h5.mt-4 Using Attribute only
+        .border.p-3.bg-light.mb-5
+          dl.row
+            dt.col-sm-3 
+              code k-responsive-menu
+            dd.col-sm-9 true
+          dl.row
+            dt.col-sm-3 
+              code k-menu-resize
+            dd.col-sm-9 700 OR 'xs', 'sm', 'md', 'lg', 'xl'
+          dl.row
+            dt.col-sm-3 
+              code k-menu-icon
+            dd.col-sm-9 &lt;i class='fa fa-bars'&gt;&lt;/i&gt;
+          dl.row
+            dt.col-sm-3 
+              code k-menu-speed
+            dd.col-sm-9 'slow' OR 'fast', 500
+          dl.row
+            dt.col-sm-3 
+              code k-menu-width
+            dd.col-sm-9 '250px' OR '100%', '40rem'
+          dl.row
+            dt.col-sm-3 
+              code k-menu-push
+            dd.col-sm-9 'left' OR 'right'
+          dl.row.mb-0
+            dt.col-sm-3 
+              code k-menu-position
+            dd.col-sm-9 'fixed' OR 'absolute'
+
+
+    h2.h2.mb-3 Licence
+    h5.h5 Copyright © 2018 Bao Nguyen
+
+    p Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+    p The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+    p THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+    h6.h6.mb-5 Bảo Nguyên
+      
+
+ 
+  script(src='https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js')
