--- a/src/styles/sass/k-responsive-menu.sass
+++ b/src/styles/sass/k-responsive-menu.sass
@@ -10,6 +10,19 @@
 	display: flex
 	flex-direction: row
 	align-items: center
+.k-menu-backdrop 
+	content: ''
+	display: block
+	width: 100%
+	height: 100%
+	position: fixed
+	background: rgba(0,0,0,.8)
+	top: 0
+	left: 0
+	z-index: 999
+	display: none
+	&.active 
+		display: block
 
 .k-responsive-menu, [k-responsive-menu]
 	> * 
