--- a/src/templates/jade-pug/header-backdrop.jade
+++ b/src/templates/jade-pug/header-backdrop.jade
@@ -1,7 +1,7 @@
 extends _layout/layout
 
 block variables
-  - var title = 'K-Resposive-Menu'
+  - var title = 'K-Responsive-Menu'
   - var bodyclass = 'index'
 
 block css
