--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -1,7 +1,7 @@
 extends _layout/layout
 
 block variables
-  - var title = 'K-Resposive-Menu'
+  - var title = 'K-Responsive-Menu'
   - var bodyclass = 'index'
 
 block css
@@ -17,10 +17,10 @@ block header
 
 block body 
   .container
-    h1.display-4(style="margin:2rem 0;") K-Resposive-Menu
+    h1.display-4(style="margin:2rem 0;") K-Responsive-Menu
     p Working on Bootstrap 4
     p 
-      code k-responsiv-menu 
+      code k-responsive-menu 
       | is a lightweight jQuery plugin to create responsive multi - level navigation menus with multi device support, By Bao Nguyen 
       a(href="http://baonguyenyam.github.io/") http://baonguyenyam.github.io/ 
     hr
