--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -91,7 +91,7 @@ block body
         pre.p-3.prettyprint.lang-html.
           &lt;script src=&quot;./bower_components/dist/js/k-responsive-menu.js&quot;&gt;
 
-        h2.mt-5#sec2 Demo
+        h2.mt-5#sec2 Demo Horizontal
         hr 
 
         dl.row
@@ -105,19 +105,19 @@ block body
         dl.row
           dt.col-sm-3 
             a.btn.btn-primary(href="./header-fluid.html") Fluid
-          dd.col-sm-9 Toggle menu with form fluid
+          dd.col-sm-9 Toggle menu with container fluid
         dl.row
           dt.col-sm-3 
             a.btn.btn-primary(href="./header-push-left.html") Push Left
-          dd.col-sm-9 Push menu Left
+          dd.col-sm-9 Push left menu
         dl.row
           dt.col-sm-3 
             a.btn.btn-primary(href="./header-push-right.html") Push Right
-          dd.col-sm-9 Push menu Right
+          dd.col-sm-9 Push right menu
         dl.row
           dt.col-sm-3 
             a.btn.btn-primary(href="./header-map-to.html") Map to
-          dd.col-sm-9 Menu Mapto
+          dd.col-sm-9 Menu Map
         dl.row
           dt.col-sm-3 
             a.btn.btn-primary(href="./header-backdrop.html") BackDrop
@@ -127,8 +127,21 @@ block body
             a.btn.btn-primary(href="./header-attr.html") Using Attribute
           dd.col-sm-9 Without JS Options only using Attribute
 
+        h2.mt-5#sec2 Demo Vertical
+        hr 
 
-
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-basic-vertical.html") Basic
+          dd.col-sm-9 Toggle menu basic
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-basic-form-vertical.html") Basic with form
+          dd.col-sm-9 Toggle menu with form inline
+        dl.row
+          dt.col-sm-3 
+            a.btn.btn-primary(href="./header-push-right-vertical.html") Push right
+          dd.col-sm-9 Toggle menu with form inline
 
         h2.mt-5#sec3 APIs 
         hr 
@@ -153,7 +166,7 @@ block body
             });
           });
         h5.h5.mt-4 Value
-        table.table.table-sm.table-bordered
+        table.table.table-bordered
           thead
             tr
               th(scope='col') #
@@ -202,7 +215,7 @@ block body
               td null
               td '&lt;i class='fa fa-bars'&gt;&lt;/i&gt;'
         h5.h5.mt-4 Events
-        table.table.table-sm.table-bordered
+        table.table.table-bordered
           thead
             tr
               th(scope='col') #
