--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -25,7 +25,7 @@ block body
       a(href="http://baonguyenyam.github.io/") http://baonguyenyam.github.io/.
     p 
       code k-responsive-menu 
-      | comes with 3 variants like horizontal, vertical and accordion menu. It gives complete responsive menu solution for any kind of websites or admin templates. The plugin has clean and well commented valid code, easy to Integrate and modify.
+      | comes with 2 variants like horizontal, vertical menu. It gives complete responsive menu solution for any kind of websites or admin templates. The plugin has clean and well commented valid code, easy to Integrate and modify.
 
     hr
 
@@ -143,6 +143,8 @@ block body
             a.btn.btn-primary(href="./header-push-right-vertical.html") Push right
           dd.col-sm-9 Toggle menu with form inline
 
+       
+
         h2.mt-5#sec3 APIs 
         hr 
         h5.h5.mt-4 JS Default value
@@ -188,7 +190,7 @@ block body
               th(scope='row') 3
               td menuType
               td 'horizontal'
-              td 'horizontal', 'vertical', 'accordion'
+              td 'horizontal', 'vertical'
             tr
               th(scope='row') 4
               td menuPush
