--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -46,7 +46,7 @@ block body
         hr 
         ul 
           li Fully Responsive multi-level Menu
-          li Menu Styles: Horizontal, Vertical and Accordion menu
+          li Menu Styles: Horizontal, Vertical menu
           li Icon Support [Integrated with FontAwesome]
           li Click / Hover Events
           li Lightweight jQuery script
