--- a/src/styles/sass/k-responsive-menu.sass
+++ b/src/styles/sass/k-responsive-menu.sass
@@ -14,13 +14,17 @@
  *  Version: 1.0.0
  */
 /* MENU BAR */
+
 .k-menu-bar
-	padding: .5rem 15px 
+	padding: .5rem 15px
 	display: flex
 	flex-direction: row
 	align-items: center
+	display: none
+	&.active
+		display: flex
 /* MENU BACKDROP */
-.k-menu-backdrop 
+.k-menu-backdrop
 	content: ''
 	display: block
 	width: 100%
@@ -28,50 +32,78 @@
 	position: fixed
 	background: rgba(0,0,0,.8)
 	top: 0
-	left: 0
-	z-index: 999
+	z-index: 9999
 	display: none
-	&.active 
+	&.active
 		display: block
 /* BEGIN MENU */
 .k-responsive-menu, [k-responsive-menu]
-	> * 
+	display: flex
+	padding-top: .5rem
+	padding-bottom: .5rem
+	align-items: center
+	> *
 		list-style-type: none
-	.k-menu-toggle
+	.k-button-toggle
 		display: none
 	.form-inline
 		padding: 0 15px 0 15px
-/* Horizontal */
+/* Toggle */
 .k-responsive-menu, [k-responsive-menu]
-	&.k-menu-horizontal
-		padding-top: .5rem
-		padding-bottom: .5rem
-		display: flex
-		flex-direction: row
-		align-items: center
-		&.k-active
-			display: none
+	&.k-menu-toggle
+		&.k-active-mobile
 			padding: 1rem 0
 			flex-direction: column
 			z-index: 1000
-			.dropdown-menu
-				position: static !important 
-				transform: none !important 
-				float: none
-			.k-menu-toggle
+			display: none
+			&.k-expand
 				display: block
-			.nav 
+			.dropdown-menu
+				position: static !important
+				transform: none !important
+				float: none
+			.k-button-toggle
+				display: block
+			.nav
 				flex-direction: column
 			&.k-menu-push-right
 				padding: 0
-				background: #f8f9fa
 				right: -100%
 				top: 0
 				height: 100%
 				overflow-y: scroll
 			&.k-menu-push-left
 				padding: 0
-				background: #f8f9fa
+				left: -100%
+				top: 0
+				height: 100%
+				overflow-y: scroll
+/* Horizontal */
+.k-responsive-menu, [k-responsive-menu]
+	&.k-menu-horizontal
+		&.k-active-mobile
+			padding: 1rem 0
+			flex-direction: column
+			z-index: 1000
+			display: none
+			&.k-expand
+				display: block
+			.dropdown-menu
+				position: static !important
+				transform: none !important
+				float: none
+			.k-button-toggle
+				display: block
+			.nav
+				flex-direction: column
+			&.k-menu-push-right
+				padding: 0
+				right: -100%
+				top: 0
+				height: 100%
+				overflow-y: scroll
+			&.k-menu-push-left
+				padding: 0
 				left: -100%
 				top: 0
 				height: 100%
@@ -81,7 +113,7 @@
 	&.k-menu-vertical
 		padding-top: .5rem
 		padding-bottom: .5rem
-		display: flex
+		display: block
 		flex-direction: column
 		.form-inline
 			padding: 15px 0
@@ -89,35 +121,35 @@
 			position: static !important
 			transform: none !important
 			float: none
-		.nav 
+		.nav
 			display: flex
 			flex-direction: column
 			.nav-item
 				.nav-link
 					padding: .5rem 0
-		&.k-active
+		&.k-active-mobile
 			display: none
 			padding: 1rem 0
 			flex-direction: column
 			z-index: 1000
+			&.k-expand
+				display: block
 			.form-inline
 				padding: 0 15px 0 15px
-			.k-menu-toggle
+			.k-button-toggle
 				display: block
-			.nav 
+			.nav
 				.nav-item
 					.nav-link
 						padding: .5rem 1rem
 			&.k-menu-push-right
 				padding: 0
-				background: #f8f9fa
 				right: -100%
 				top: 0
 				height: 100%
 				overflow-y: scroll
 			&.k-menu-push-left
 				padding: 0
-				background: #f8f9fa
 				left: -100%
 				top: 0
 				height: 100%
