--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -189,8 +189,8 @@ block body
             tr
               th(scope='row') 3
               td menuType
-              td 'horizontal'
-              td 'horizontal', 'vertical'
+              td 'toggle'
+              td 'horizontal', 'vertical', 'toggle'
             tr
               th(scope='row') 4
               td menuPush
