--- a/src/styles/sass/admin/main.sass
+++ b/src/styles/sass/admin/main.sass
@@ -4,3 +4,5 @@ pre
     white-space: -pre-wrap     /* Opera 4-6 */
     white-space: -o-pre-wrap   /* Opera 7 */
     word-wrap: break-word      /* Internet Explorer 5.5+ */
+#demoResAllInOneMenu
+    background: #f8f9fa!important
