--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -116,6 +116,10 @@ block body
           dd.col-sm-9 Push right menu
         dl.row
           dt.col-sm-3 
+            a.btn.btn-primary(href="./header-push-content-right.html") Push Right + Pull Main
+          dd.col-sm-9 Push right menu and pull main tag
+        dl.row
+          dt.col-sm-3 
             a.btn.btn-primary(href="./header-map-to.html") Map to
           dd.col-sm-9 Menu Map
         dl.row
