--- a/src/templates/jade-pug/index.jade
+++ b/src/templates/jade-pug/index.jade
@@ -116,6 +116,10 @@ block body
           dd.col-sm-9 Push right menu
         dl.row
           dt.col-sm-3 
+            a.btn.btn-primary(href="./header-push-content-left.html") Push Left + Pull Main
+          dd.col-sm-9 Push left menu and pull main tag
+        dl.row
+          dt.col-sm-3 
             a.btn.btn-primary(href="./header-push-content-right.html") Push Right + Pull Main
           dd.col-sm-9 Push right menu and pull main tag
         dl.row
@@ -217,6 +221,11 @@ block body
               td true/false
             tr
               th(scope='row') 8
+              td menuFloat
+              td true
+              td true/false
+            tr
+              th(scope='row') 9
               td menuIcon
               td null
               td '&lt;i class='fa fa-bars'&gt;&lt;/i&gt;'
